--- a/Pattern_Builder/CMakeLists.txt
+++ b/Pattern_Builder/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.4)
 
 project(PatternBuilder)
 
-set (INCLUDE "./include")
-include_directories(${INCLUDE})
+include_directories("./include")
 
 add_subdirectory(app)
