--- a/Pattern_Builder/app/CMakeLists.txt
+++ b/Pattern_Builder/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(target "app")
 
-file(GLOB hrcs ../${INCLUDE}/*h)
 file(GLOB srcs "*.cpp")
 
-add_library(${target} STATIC ${hrcs}  ${srcs})
+add_executable(${target} ${srcs} ${hdrs})
+
